--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="header-logo" href="./index.html"
@@ -50,9 +50,9 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="orderservice">
+      <!-- <section class="orderservice">
         <div class="container">
           <h1 class="orderservice-header">
             Effective Solutions for Your Business
@@ -61,7 +61,7 @@
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <section class="advantages section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
@@ -117,7 +117,7 @@
           </ul>
         </div>
       </section>
-      <section class="team-section">
+      <section class="team section">
         <div class="container">
           <h2 class="team-subtitle">Our Team</h2>
           <ul class="team-list">
@@ -360,7 +360,7 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio section">
+      <!-- <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-subtitle">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -488,9 +488,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-content">
         <div class="footer-content-info">
           <a class="footer-logo" href="./index.html"
@@ -638,5 +638,7 @@
         </form>
       </div>
     </div>
+  </body>
+</html> -->
   </body>
 </html>
