--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="portfolio section">
+      <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-subtitle">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -488,7 +488,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer-content">
