--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </header> -->
     <main>
-      <!-- <section class="orderservice">
+      <section class="orderservice">
         <div class="container">
           <h1 class="orderservice-header">
             Effective Solutions for Your Business
@@ -61,7 +61,7 @@
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <section class="advantages section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
