--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
+                srcset="./images/markguerrero.jpg 1x, ./images/markguerrero-2x.jpg 2x"
                 src="./images/markguerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -183,6 +184,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
+                srcset="./images/tomford.jpg 1x, ./images/tomford-2x.jpg 2x"
                 src="./images/tomford.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -242,6 +244,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
+                srcset="./images/camilagarcia.jpg 1x, ./images/camilagarcia-2x.jpg 2x"
                 src="./images/camilagarcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -301,6 +304,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
+                srcset="./images/danielwilson.jpg 1x, ./images/danielwilson-2x.jpg 2x"
                 src="./images/danielwilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -368,6 +372,7 @@
               <div class="portfolio-list-item-wrapper">
                 <img
                   class="portfolio-list-item-image"
+                  srcset="./images/bankingapp.jpg 1x, ./images/bankingapp-2x.jpg 2x"
                   src="./images/bankingapp.jpg"
                   alt="Banking App"
                   width="360"
@@ -388,6 +393,7 @@
               <div class="portfolio-list-item-wrapper">
                 <img
                   class="portfolio-list-item-image"
+                  srcset="./images/cashlesspayment.jpg 1x, ./images/cashlesspayment-2x.jpg 2x"
                   src="./images/cashlesspayment.jpg"
                   alt="Cashless Payment"
                   width="360"
@@ -408,6 +414,7 @@
               <div class="portfolio-list-item-wrapper">
                 <img
                   class="portfolio-list-item-image"
+                  srcset="./images/meditationapp.jpg 1x, ./images/meditationapp-2x.jpg 2x"
                   src="./images/meditationapp.jpg"
                   alt="Meditation App"
                   width="360"
@@ -428,6 +435,7 @@
               <div class="portfolio-list-item-wrapper">
                 <img
                   class="portfolio-list-item-image"
+                  srcset="./images/taxiservice.jpg 1x, ./images/taxiservice-2x.jpg 2x"
                   src="./images/taxiservice.jpg"
                   alt="Taxi Service"
                   width="360"
@@ -448,6 +456,7 @@
               <div class="portfolio-list-item-wrapper">
                 <img
                   class="portfolio-list-item-image"
+                  srcset="./images/screenillustrations.jpg 1x, ./images/screenillustrations-2x.jpg 2x"
                   src="./images/screenillustrations.jpg"
                   alt="Screen Illustrations"
                   width="360"
@@ -470,6 +479,7 @@
               <div class="portfolio-list-item-wrapper">
                 <img
                   class="portfolio-list-item-image"
+                  srcset="./images/onlinecourses.jpg 1x, ./images/onlinecourses-2x.jpg 2x"
                   src="./images/onlinecourses.jpg"
                   alt="Online Courses"
                   width="360"
@@ -637,8 +647,8 @@
           <button type="submit" class="modal-button-send">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
-</html> -->
+</html>
   </body>
 </html>
