--- a/index.html
+++ b/index.html
@@ -370,14 +370,24 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="portfolio-list-item-wrapper">
-                <img
-                  class="portfolio-list-item-image"
-                  srcset="./images/bankingapp.jpg 1x, ./images/bankingapp-2x.jpg 2x"
-                  src="./images/bankingapp.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source srcset="./images/bankingapp.jpg 1x, ./images/bankingapp-2x.jpg 2x"
+                    media="(min-width: 1440px)"
+                  />
+                  <source srcset="./images/bankingapp-tab.jpg 1x, ./images/bankingapp-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/bankingapp-mob.jpg 1x, ./images/bankingapp-mob-2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-list-item-image"                    
+                    src="./images/bankingapp.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>                
                 <p class="portfolio-list-item-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -391,14 +401,24 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-item-wrapper">
-                <img
-                  class="portfolio-list-item-image"
-                  srcset="./images/cashlesspayment.jpg 1x, ./images/cashlesspayment-2x.jpg 2x"
-                  src="./images/cashlesspayment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source srcset="./images/cashlesspayment.jpg 1x, ./images/cashlesspayment-2x.jpg 2x"
+                    media="(min-width: 1440px)"
+                  />
+                  <source srcset="./images/cashlesspayment-tab.jpg 1x, ./images/cashlesspayment-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/cashlesspayment-mob.jpg 1x, ./images/cashlesspayment-mob-2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-list-item-image"
+                    src="./images/cashlesspayment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-list-item-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -412,14 +432,24 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-item-wrapper">
-                <img
-                  class="portfolio-list-item-image"
-                  srcset="./images/meditationapp.jpg 1x, ./images/meditationapp-2x.jpg 2x"
-                  src="./images/meditationapp.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source srcset="./images/meditationapp.jpg 1x, ./images/meditationapp-2x.jpg 2x"
+                    media="(min-width: 1440px)"
+                  />
+                  <source srcset="./images/meditationapp-tab.jpg 1x, ./images/meditationapp-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/meditationapp-mob.jpg 1x, ./images/meditationapp-mob-2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-list-item-image"
+                    src="./images/meditationapp.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-list-item-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -433,14 +463,24 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-item-wrapper">
-                <img
-                  class="portfolio-list-item-image"
-                  srcset="./images/taxiservice.jpg 1x, ./images/taxiservice-2x.jpg 2x"
-                  src="./images/taxiservice.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source srcset="./images/taxiservice.jpg 1x, ./images/taxiservice-2x.jpg 2x"
+                    media="(min-width: 1440px)"
+                  />
+                  <source srcset="./images/taxiservice-tab.jpg 1x, ./images/taxiservice-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/taxiservice-mob.jpg 1x, ./images/taxiservice-mob-2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-list-item-image"
+                    src="./images/taxiservice.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                </picture>              
                 <p class="portfolio-list-item-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -454,14 +494,24 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-item-wrapper">
-                <img
-                  class="portfolio-list-item-image"
-                  srcset="./images/screenillustrations.jpg 1x, ./images/screenillustrations-2x.jpg 2x"
-                  src="./images/screenillustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source srcset="./images/screenillustrations.jpg 1x, ./images/screenillustrations-2x.jpg 2x"
+                    media="(min-width: 1440px)"
+                  />
+                  <source srcset="./images/screenillustrations-tab.jpg 1x, ./images/screenillustrations-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/screenillustrations-mob.jpg 1x, ./images/screenillustrations-mob-2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-list-item-image"
+                    src="./images/screenillustrations.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-list-item-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -477,14 +527,25 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-item-wrapper">
-                <img
-                  class="portfolio-list-item-image"
-                  srcset="./images/onlinecourses.jpg 1x, ./images/onlinecourses-2x.jpg 2x"
-                  src="./images/onlinecourses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source srcset="./images/onlinecourses.jpg 1x, ./images/onlinecourses-2x.jpg 2x"
+                    media="(min-width: 1440px)"
+                  />
+                  <source srcset="./images/onlinecourses-tab.jpg 1x, ./images/onlinecourses-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/onlinecourses-mob.jpg 1x, ./images/onlinecourses-mob-2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="portfolio-list-item-image"
+                    srcset="./images/onlinecourses.jpg 1x, ./images/onlinecourses-2x.jpg 2x"
+                    src="./images/onlinecourses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-list-item-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
