--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-content">
         <div class="footer-content-info">
           <a class="footer-logo" href="./index.html"
@@ -888,6 +888,6 @@
           <button type="submit" class="modal-button-send">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
