--- a/index.html
+++ b/index.html
@@ -881,10 +881,10 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <div class="modal-policy-text-wrapper">
+              <span class="modal-policy-text-wrapper">
                 I accept the terms and conditions of the
                 <a class="modal-policy-link" href="">Privacy Policy</a>
-              </div>
+              </span>
             </label>
           </div>
           <button type="submit" class="modal-button-send">Send</button>
